--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "next": "^13.2.4"
+    "next": "^13.2.4",
+    "gatsby": "4.0.0"
   },
   "optionalDependencies": {
     "ahhhhh": "^1.0.0"
