--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "_smerker.js",
   "scripts": {
     "start": "ahhhhh",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Errrrror: no test specified\" && exit 1"
   },
   "author": "",
   "license": "ISC",
