--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "gatsby": "5.8.0",
+    "puppeteer": "^19.8.5",
     "react": "18.0.0"
   },
   "optionalDependencies": {
