--- a/package.json
+++ b/package.json
@@ -4,13 +4,12 @@
   "description": "",
   "main": "_smerker.js",
   "scripts": {
-    "start": "ahhhhh && node build-the-puppets.js",
+    "start": "ahhhhh && node -v",
     "test": "echo \"Errrrror: no test specified\" && exit 1"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "puppeteer": "^19.8.5"
   },
   "optionalDependencies": {
     "ahhhhh": "^1.0.0"
