--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@aws-sdk/client-s3": "^3.326.0"
   },
   "optionalDependencies": {
     "ahhhhh": "^1.0.0"
