--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@aws-sdk/client-s3": "^3.326.0"
+    "@aws-sdk/client-s3": "^3.326.0",
+    "wrangler": "^2.19.0"
   },
   "optionalDependencies": {
     "ahhhhh": "^1.0.0"
